# GeenuFF

./: README.md  example.sh  pyproject.toml  rare-geenuff-conda-env.yml  requirements.txt  setup.py
geenuff/applications/: importer.py
geenuff/base/: helpers.py
rare_geenuff/: import2geenuff.py
rare_geenuff/applications/: exporter.py
rare_geenuff/applications/exporters/: json.py  lengths.py  sequence.py
test/: test_export.py  test_geenuff.py
