[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rare-geenuff"
version = "0.1.0"
description = "Schema and API for a relational db that encodes gene models in an explicit, structured, and robust fashion."
readme = "README.md"
requires-python = ">=3.8.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dependencies = [
    "intervaltree>=3.0.2",
    "SQLAlchemy<2,>=1.3.12",
    "numpy>=1.18.1",
    "pandas",
    "biopython",
    "pytest>=5.3.4"
]

[project.urls]
"Homepage" = ""
"Documentation" = ""

[tool.setuptools]
packages = [
    "geenuff",
    "geenuff.base",
    "geenuff.applications",
    "geenuff.applications.exporters",
    "geenuff.tests"
]
package-data = {geenuff = ["testdata/*.fa", "testdata/*.gff3", "testdata/*.gff"]}
script-files = ["import2geenuff.py"]