[build-system]
requires = ["setuptools < 72"]
build-backend = "setuptools.build_meta"

[project]
name = "rare-geenuff"
version = "0.1.0"
description = "Schema and API for a relational db that encodes gene models in an explicit, structured, and robust fashion."
readme = "README.md"
requires-python = ">=3.8.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dependencies = [
    "intervaltree>=3.0.2",
    "SQLAlchemy<2,>=1.3.12",
    "numpy>=1.18.1",
    "pandas",
    "biopython"
]

[project.urls]
"Homepage" = "https://github.com/anthony-aylward/GeenuFF/tree/rare"
"Documentation" = "https://github.com/anthony-aylward/GeenuFF/tree/rare"

[tool.setuptools]
packages = [
    "rare_geenuff",
    "rare_geenuff.base",
    "rare_geenuff.applications",
    "rare_geenuff.applications.exporters"
]
script-files = ["import2geenuff.py"]